// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportJobsToS3V2 > should publish a partenariat job 1`] = `
[
  {
    "apply": {
      "phone": "0123456789",
      "recipient_id": "partners_66c52e00c8f12f66f971106f",
      "url": "https://apply.com",
    },
    "contract": {
      "duration": 6,
      "remote": "onsite",
      "start": "2021-01-28T15:00:00.000Z",
      "type": [
        "Apprentissage",
        "Professionnalisation",
      ],
    },
    "identifier": {
      "id": "66c52e00c8f12f66f971106f",
      "partner_job_id": "id_1",
      "partner_label": "Hellowork",
    },
    "is_delegated": true,
    "offer": {
      "access_conditions": [
        "offer_access_conditions",
      ],
      "description": "Attention il te faut une super motivation pour ce job",
      "desired_skills": [
        "offer_desired_skills",
      ],
      "opening_count": 1,
      "publication": {
        "creation": "2021-01-28T15:00:00.000Z",
        "expiration": "2050-01-01T00:00:00.000Z",
      },
      "rome_codes": [
        "D1102",
      ],
      "status": "Active",
      "target_diploma": {
        "european": "3",
        "label": "Master",
      },
      "title": "Une super offre d'alternance",
      "to_be_acquired_skills": [
        "offer_to_be_acquired_skills",
      ],
    },
    "workplace": {
      "brand": null,
      "description": "workplace_description",
      "domain": {
        "idcc": 1003,
        "naf": {
          "code": "6201Z",
          "label": "Programmation informatique",
        },
        "opco": "ATLAS",
      },
      "legal_name": "nom CFA",
      "location": {
        "address": "rue du cfa 75002 Paris",
        "geopoint": {
          "coordinates": [
            0,
            0,
          ],
          "type": "Point",
        },
      },
      "name": "nom CFA",
      "siret": "12345678901234",
      "size": "0-50",
      "website": "http://workplace_website.com",
    },
  },
]
`;

exports[`exportJobsToS3V2 > should publish jobs 1`] = `
[
  {
    "apply": {
      "phone": "0123456789",
      "recipient_id": "partners_66c52e00c8f12f66f971106f",
      "url": "https://apply.com",
    },
    "contract": {
      "duration": 6,
      "remote": "onsite",
      "start": "2021-01-28T15:00:00.000Z",
      "type": [
        "Apprentissage",
        "Professionnalisation",
      ],
    },
    "identifier": {
      "id": "66c52e00c8f12f66f971106f",
      "partner_job_id": "id_1",
      "partner_label": "Hellowork",
    },
    "is_delegated": false,
    "offer": {
      "access_conditions": [
        "offer_access_conditions",
      ],
      "description": "Attention il te faut une super motivation pour ce job",
      "desired_skills": [
        "offer_desired_skills",
      ],
      "opening_count": 1,
      "publication": {
        "creation": "2021-01-28T15:00:00.000Z",
        "expiration": "2050-01-01T00:00:00.000Z",
      },
      "rome_codes": [
        "D1102",
      ],
      "status": "Active",
      "target_diploma": {
        "european": "3",
        "label": "Master",
      },
      "title": "Une super offre d'alternance",
      "to_be_acquired_skills": [
        "offer_to_be_acquired_skills",
      ],
    },
    "workplace": {
      "brand": "workplace_brand",
      "description": "workplace_description",
      "domain": {
        "idcc": 1003,
        "naf": {
          "code": "6201Z",
          "label": "Programmation informatique",
        },
        "opco": "ATLAS",
      },
      "legal_name": "workplace_legal_name",
      "location": {
        "address": "126 RUE DE L'UNIVERSITE 75007 PARIS",
        "geopoint": {
          "coordinates": [
            0,
            0,
          ],
          "type": "Point",
        },
      },
      "name": "workplace_legal_name",
      "siret": "13002526500013",
      "size": "0-50",
      "website": "http://workplace_website.com",
    },
  },
  {
    "apply": {
      "phone": "0123456789",
      "recipient_id": "partners_66c52e00393b331450d8bedc",
      "url": "https://apply.com",
    },
    "contract": {
      "duration": 6,
      "remote": "onsite",
      "start": "2021-01-28T15:00:00.000Z",
      "type": [
        "Apprentissage",
        "Professionnalisation",
      ],
    },
    "identifier": {
      "id": "66c52e00393b331450d8bedc",
      "partner_job_id": "id_2",
      "partner_label": "Hellowork",
    },
    "is_delegated": false,
    "offer": {
      "access_conditions": [
        "offer_access_conditions",
      ],
      "description": "Attention il te faut une super motivation pour ce job",
      "desired_skills": [
        "offer_desired_skills",
      ],
      "opening_count": 1,
      "publication": {
        "creation": "2021-01-28T15:00:00.000Z",
        "expiration": "2050-01-01T00:00:00.000Z",
      },
      "rome_codes": [
        "D1102",
      ],
      "status": "Active",
      "target_diploma": {
        "european": "3",
        "label": "Master",
      },
      "title": "Une super offre d'alternance",
      "to_be_acquired_skills": [
        "offer_to_be_acquired_skills",
      ],
    },
    "workplace": {
      "brand": "workplace_brand",
      "description": "workplace_description",
      "domain": {
        "idcc": 1003,
        "naf": {
          "code": "6201Z",
          "label": "Programmation informatique",
        },
        "opco": "ATLAS",
      },
      "legal_name": "workplace_legal_name",
      "location": {
        "address": "126 RUE DE L'UNIVERSITE 75007 PARIS",
        "geopoint": {
          "coordinates": [
            0,
            0,
          ],
          "type": "Point",
        },
      },
      "name": "workplace_legal_name",
      "siret": "13002526500013",
      "size": "0-50",
      "website": "http://workplace_website.com",
    },
  },
]
`;
